--- a/config/sphinx-build/_static/css/material.css
+++ b/config/sphinx-build/_static/css/material.css
@@ -1,13 +1,51 @@
+.md-header {
+  background-color: #0d184c;
+}
+
+.md-tabs {
+  background-color: #0d184c;
+}
+
+.md-typeset a {
+  color: #2cbea2;
+}
+
+.md-nav__link--active, .md-nav__link:active {
+  color: #2cbea2;
+}
+
 .md-relbar2__inner{
     padding-top:0;
     padding-bottom:0;
     margin-bottom: 0;
 }
 
+
+
+.md-typeset {
+    font-size: .7rem;
+    line-height: 1.5; 
+}
+
+.md-typeset h1 {
+    margin: 0 0 2rem;   
+    color: rgba(0,0,0,.54);   
+    font-size: 1.5625rem;   
+    font-weight: 400;
+    line-height: 1.3; 
+}
+
+.md-typeset h2 {
+    font-size: 1.25rem;
+    line-height: 1.3;
+    font-weight: 300;
+    margin: 1.6em 0 0.54em;
+}
+
 .sphinx-tabs-tab {
   position: relative;
-  font-family: "Chivo", "Colfax", Helvetica, Arial, sans-serif;
-  color: #fb8c00;
+  font-family: Poppins;
+  color: #0d184c;
   line-height: 24px;
   margin: 0;
   font-size: 19px;
@@ -17,17 +55,4 @@
   border: 0;
   padding: 1rem 1.5rem;
   margin-bottom: 0;
-}
-
-.md-typeset{
-    font-size:.7rem;
-    line-height:1.6;
-    -webkit-print-color-adjust:exact
-}
-
-body,input{
-    color:rgba(0,0,0,.87);
-    -webkit-font-feature-settings:"kern","liga";
-    font-feature-settings:"kern","liga";
-    font-family:"Chivo", "Colfax", "Franziska", Helvetica, Arial, sans-serif;
 }
